Fix top description
It was too big. Made it always break down into three parts:

- Dream it...
- BarcelonaTech's first...
- 400 hackers. 36h.

Due to the enforced line breaks, no width rule is needed.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -56,9 +56,7 @@ $bwhite: #FFF;
 .top-description p, .bottom-description p, .coming-soon p {
     @include center-block();
     color: $blight;
-    width: 60%;
-    max-width: 900px;
-    font-size: 1.6em;
+    font-size: 1.3em;
     line-height: 1.9em;
     text-align: center;
 }
